# Rag_project_ecommrance

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml
data_ingestion/: ingestion_pipeline.py
notebook/: customer_support.ipynb
retriever/: retrieval.py
template/: chat.html
templates/: chat.html
utils/: model_loader.py
